<resources>
    <string name="app_name">TÂN</string>
    <string name="hint_id">ID</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="customeraddress">Address</string>
    <string name="customercountry">Country</string>
    <string name="register_customer">Register Customer</string>
	<string name="update">Thay đổi</string>
    <string name="show_list_customer">List of Registered Customer</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>

    <string name="hint_name">Name</string>

</resources>
